[gd_scene load_steps=51 format=3 uid="uid://c07t1k3q6u62"]

[ext_resource type="Script" path="res://Entities/Monsters/Tomas_enemy/enemy.gd" id="1_qnemb"]
[ext_resource type="PackedScene" uid="uid://bhsc1c1ccq0q3" path="res://Entities/entity_hitbox.tscn" id="2_6ml1h"]
[ext_resource type="Texture2D" uid="uid://dpp0s8ntfa3kj" path="res://Entities/Monsters/Tomas_enemy/shield droid/shield droid/shock attack.png" id="2_6p04v"]
[ext_resource type="PackedScene" uid="uid://bx5w1c6jc4as7" path="res://Entities/Monsters/danger_area.tscn" id="2_88hk7"]
[ext_resource type="PackedScene" uid="uid://cj8xfose28o1" path="res://UI/Health Bar/texture_health_bar.tscn" id="2_kqiiu"]
[ext_resource type="Texture2D" uid="uid://cgr2jk62pyqwl" path="res://Entities/Monsters/Tomas_enemy/shield droid/shield droid/static idle.png" id="2_q7100"]
[ext_resource type="Texture2D" uid="uid://bkgeq3v4et2w5" path="res://Entities/Monsters/Tomas_enemy/shield droid/shield droid/hit and death.png" id="3_06cwn"]
[ext_resource type="Script" path="res://Entities/enemy_hitbox.gd" id="5_2po8s"]
[ext_resource type="Texture2D" uid="uid://1kde6qds4n2n" path="res://Entities/Monsters/Tomas_enemy/shield droid/shield droid/walk.png" id="5_vvcw1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ja33c"]
height = 70.4

[sub_resource type="CircleShape2D" id="CircleShape2D_ff2c6"]
radius = 12.8

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g5uan"]
size = Vector2(16, 22.4)

[sub_resource type="CircleShape2D" id="CircleShape2D_p3aq0"]
radius = 1061.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w1l7q"]
height = 64.0

[sub_resource type="AtlasTexture" id="AtlasTexture_h4amu"]
atlas = ExtResource("2_6p04v")
region = Rect2(0, 0, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmuvv"]
atlas = ExtResource("2_6p04v")
region = Rect2(0, 31, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_nflpt"]
atlas = ExtResource("2_6p04v")
region = Rect2(0, 62, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkcl3"]
atlas = ExtResource("2_6p04v")
region = Rect2(0, 93, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_0na02"]
atlas = ExtResource("2_6p04v")
region = Rect2(0, 124, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xe6n"]
atlas = ExtResource("2_6p04v")
region = Rect2(0, 155, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryb6m"]
atlas = ExtResource("2_6p04v")
region = Rect2(0, 186, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_ims26"]
atlas = ExtResource("2_6p04v")
region = Rect2(0, 217, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_po3tj"]
atlas = ExtResource("2_6p04v")
region = Rect2(0, 248, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_m15ju"]
atlas = ExtResource("2_6p04v")
region = Rect2(0, 279, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_rh1ow"]
atlas = ExtResource("2_6p04v")
region = Rect2(0, 310, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_kc3cu"]
atlas = ExtResource("2_6p04v")
region = Rect2(0, 341, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhxq5"]
atlas = ExtResource("2_6p04v")
region = Rect2(0, 372, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfdey"]
atlas = ExtResource("2_6p04v")
region = Rect2(0, 403, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrg3y"]
atlas = ExtResource("3_06cwn")
region = Rect2(0, 0, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_2r11i"]
atlas = ExtResource("3_06cwn")
region = Rect2(0, 31, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_47yna"]
atlas = ExtResource("3_06cwn")
region = Rect2(0, 62, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_65d0n"]
atlas = ExtResource("3_06cwn")
region = Rect2(0, 93, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_6co16"]
atlas = ExtResource("3_06cwn")
region = Rect2(0, 124, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdfky"]
atlas = ExtResource("3_06cwn")
region = Rect2(0, 155, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_crgrg"]
atlas = ExtResource("3_06cwn")
region = Rect2(0, 186, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmre0"]
atlas = ExtResource("3_06cwn")
region = Rect2(0, 0, 90, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjllp"]
atlas = ExtResource("3_06cwn")
region = Rect2(0, 36, 90, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1730"]
atlas = ExtResource("3_06cwn")
region = Rect2(0, 0, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjoqp"]
atlas = ExtResource("3_06cwn")
region = Rect2(0, 31, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xq5f"]
atlas = ExtResource("3_06cwn")
region = Rect2(0, 0, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gchh"]
atlas = ExtResource("3_06cwn")
region = Rect2(0, 31, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnywg"]
atlas = ExtResource("3_06cwn")
region = Rect2(0, 0, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_us4di"]
atlas = ExtResource("3_06cwn")
region = Rect2(0, 31, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4tx4"]
atlas = ExtResource("5_vvcw1")
region = Rect2(0, 0, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_slq85"]
atlas = ExtResource("5_vvcw1")
region = Rect2(0, 31, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_y55k5"]
atlas = ExtResource("5_vvcw1")
region = Rect2(0, 62, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm8x0"]
atlas = ExtResource("5_vvcw1")
region = Rect2(0, 93, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_bx15k"]
atlas = ExtResource("5_vvcw1")
region = Rect2(0, 124, 90, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfcsp"]
atlas = ExtResource("5_vvcw1")
region = Rect2(0, 155, 90, 31)

[sub_resource type="SpriteFrames" id="SpriteFrames_lijxw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4amu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmuvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nflpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkcl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0na02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xe6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryb6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ims26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po3tj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m15ju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rh1ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kc3cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhxq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfdey")
}],
"loop": false,
"name": &"attack",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrg3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r11i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47yna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65d0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6co16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdfky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crgrg")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmre0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjllp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1730")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjoqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xq5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gchh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnywg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_us4di")
}],
"loop": false,
"name": &"hurt",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_q7100")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4tx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slq85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y55k5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm8x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bx15k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfcsp")
}],
"loop": true,
"name": &"walking",
"speed": 12.0
}]

[node name="enemy" type="CharacterBody2D"]
position = Vector2(-1.19209e-07, -2.38419e-07)
scale = Vector2(2.5, 2.5)
slide_on_ceiling = false
script = ExtResource("1_qnemb")
health = 30
movespeed = 50
attack = 5

[node name="HealthBar" parent="." instance=ExtResource("2_kqiiu")]
offset_left = -32.0
offset_right = 32.0

[node name="AttackArea" parent="." instance=ExtResource("2_88hk7")]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -9.6)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ja33c")

[node name="DroidHitbox" parent="." instance=ExtResource("2_6ml1h")]
position = Vector2(0, -22.4)
collision_layer = 4
monitorable = true
script = ExtResource("5_2po8s")

[node name="Node" type="CollisionShape2D" parent="DroidHitbox"]
position = Vector2(-2.19, 9.7)
shape = SubResource("CircleShape2D_ff2c6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.6, -11.2)
shape = SubResource("RectangleShape2D_g5uan")

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(4.76837e-08, 1.90735e-06)
collision_layer = 0
monitorable = false

[node name="DetectionAreaBody" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, 1.99994)
scale = Vector2(0.2, 0.2)
shape = SubResource("CircleShape2D_p3aq0")

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="AttackRangeArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRangeArea"]
position = Vector2(4.76836e-08, -9.6)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_w1l7q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -16)
scale = Vector2(0.902, 1)
sprite_frames = SubResource("SpriteFrames_lijxw")
animation = &"hurt"

[connection signal="area_entered" from="AttackArea" to="AttackArea" method="_on_area_entered"]
[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_area_exited"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="area_entered" from="AttackRangeArea" to="." method="_on_attack_range_area_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
